...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Starred repository" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ob-3Y-51o">
                                                <rect key="frame" x="15" y="20" width="384" height="41"/>
                                                <accessibility key="accessibilityConfiguration" identifier="titleLable"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                <color key="textColor" name="FrontOrange"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Insert repository name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="DI5-1R-XiP">
                                                        <rect key="frame" x="15" y="56.5" width="354" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="repoNameTextField"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" textContentType="username"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Insert repository owner" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="5xR-5F-edR">
                                                        <rect key="frame" x="15" y="167" width="354" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="repoOwnerTextField"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" textContentType="username"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repository name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUG-EZ-MdK">
                                                        <rect key="frame" x="15" y="20" width="354" height="26.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="repoNameLable"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                        <color key="textColor" name="FrontOrange"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Owner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z5R-Yb-sFc">
                                                        <rect key="frame" x="15" y="130.5" width="354" height="26.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="repoOwnerLabel"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                        <color key="textColor" name="FrontOrange"/>
...
                                                        <rect key="frame" x="138.5" y="241" width="107" height="47"/>
                                                        <color key="backgroundColor" name="FrontOrange"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="confirmButton"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        </subviews>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="contentView"/>
                                        <constraints>
                                            <constraint firstItem="WY6-XG-HVX" firstAttribute="top" secondItem="2Ob-3Y-51o" secondAttribute="bottom" constant="40" id="4Cy-h7-c2S"/>
...
