...

    override func viewDidLoad() {
        super.viewDidLoad()

        configureTableView()
        configureNavigationBar()
        setTitle("Star Gazers List", color: UIColor.frontOrange)
        messageViewHeightConstraint.constant = 0

        compositeDisposable += networkMonitorService?.isNetworkAvailable.producer.startWithValues({ [weak self] (isAvailable: Bool?) in
            if let connectionAvailable = isAvailable {
                self?.isNetworkConnectionAvailable = connectionAvailable
                if !connectionAvailable {
...
                    self?.hideMessageView()
                }
            }
        })

        compositeDisposable += gazersViewModel.errorSignal.producer.filter({ $0 == true }).observe(on: UIScheduler()).on(value: { [weak self] _ in
            self?.showAlert(title: "Error", message: self?.viewModel.errorMessage() ?? "")
        }).start()
    }

    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)

...
